<resources>
    <string name="app_name">ChessWithMe</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="enter">Войти</string>
    <string name="register">Регистрация</string>
    <string name="registration_text">РЕГИСТРАЦИЯ</string>
    <string name="lessons">Уроки</string>
    <string name="leaderboards">Рейтинг</string>
    <string name="profile">Профиль</string>
    <string name="lesson_number">5</string>
    <string name="start_now">Начните прямо сейчас!</string>
    <string name="want_to_learn">Хотите изучить шахматы в совершенстве?</string>
    <string name="qwerty1234">QWERTY1234</string>
    <string name="example_mail_ru">example@mail.ru</string>
    <string name="password_text">Пароль</string>
    <string name="email_text">Электронная почта</string>
    <string name="no_account">Ещё нет аккаунта? Создайте его!</string>
    <string name="repeat_password_text">Повторите пароль</string>
    <string name="already_have_account">Уже зарегистрированы? Войдите в аккаунт.</string>
    <string name="username_text">Имя</string>
    <string name="chessproplayer">ChessProPlayer</string>
</resources>