<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".activities.LoginActivity">

<!--    <View-->
<!--        android:id="@+id/group"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_margin="50dp"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:background="#00000000">-->
<!--    </View>-->

<!--    <View-->
<!--        android:id="@+id/rectangle_2"-->
<!--        android:layout_width="494dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_margin="40dp"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:background="@drawable/input_field_stroke">-->

<!--    </View>-->

    <RelativeLayout
        android:id="@+id/email_password_button_group"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="200dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/email_text"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_font"
            android:textColor="@color/white"
            android:text="@string/email_text"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_text"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_field_stroke"
            android:fontFamily="@font/montserrat_font"
            android:textSize="17sp"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hint_color2"
            android:hint="@string/example_mail_ru"/>

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_below="@id/email"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_font"
            android:textColor="@color/white"
            android:text="@string/password_text"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_below="@id/password_text"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_field_stroke"
            android:fontFamily="@font/montserrat_font"
            android:textSize="17sp"
            android:hint="@string/qwerty1234"
            android:textColorHint="@color/hint_color2"/>

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_font"
            android:textSize="13sp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:layout_below="@id/password"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/wrong_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_font"
            android:textSize="17sp"
            android:layout_centerHorizontal="true"
            tools:text="Введён неверный email или пароль!"
            android:textColor="@color/hint_color"
            android:layout_below="@id/text_forgot_password"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:id="@+id/button"
            android:layout_below="@id/text_forgot_password"
            android:layout_marginStart="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:background="@drawable/button_shapebg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_font"
                android:text="Войти"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/no_account"
            android:fontFamily="@font/montserrat_font"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </RelativeLayout>


</RelativeLayout>